[package]
name = "telebot"
version = "0.2.9"

authors = ["bytesnake <bytesnake@mailbox.org>"]
license = "MIT/Apache-2.0"
description = "A wrapper around the telegram bot api, powered by futures"

repository = "https://github.com/bytesnake/telebot"
readme = "README.md"
documentation = "https://docs.rs/telebot"

categories = ["network-programming"]
keywords = ["telebot", "telegram", "bot", "chat", "async"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
erased-serde = "0.3"
futures = "0.1.18"
tokio-core = "0.1.15"
hyper = "0.12.0"
hyper-tls = "0.3.0"
native-tls = "0.2"
hyper-multipart-rfc7578 = "0.2.0-alpha2"
uuid = { version = "0.6", features = ["v4"] }
telebot-derive = {version = "0.0.11", path = "./telebot-derive/"}
log = "0.4"
failure = "0.1.1"
