[package]
name = "telebot"
edition = "2018"
version = "0.3.0"

authors = ["bytesnake <bytesnake@mailbox.org>"]
license = "MIT/Apache-2.0"
description = "A wrapper around the telegram bot api, powered by futures"

repository = "https://github.com/bytesnake/telebot"
readme = "README.md"
documentation = "https://docs.rs/telebot"

categories = ["network-programming"]
keywords = ["telebot", "telegram", "bot", "chat", "async"]

[dependencies]
tokio = {version = "0.1", default-features = false, features = ["io", "reactor", "tcp"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
erased-serde = "0.3"
futures = "0.1"
hyper = "0.12"
hyper-tls = "0.3.0"
native-tls = "0.2"
hyper-multipart-rfc7578 = "0.3"
uuid = { version = "0.7", features = ["v4"] }
telebot-derive = {version = "0.0.13", path = "./telebot-derive/"}
log = "0.4"
failure = "0.1.1"
