[package]
name = "telebot-derive"
version = "0.0.14"
authors = ["bytesnake [bytesnake@mailbox.org"]

description = "Getters and setters for the telebot library"
license = "MIT"

[lib]
proc-macro = true
# Unit tests don't seem to work for proc-macro crates.
test = false

[dependencies]
log = "0.4"
syn = "0.11"
quote = "0.3"
